Basic Rock Extruder functionality
- Spawns rock or raw mineral every 30 seconds
- Possible drops are Limestone Chunk, Sandstone Chunk, Shale Chunk and Nickel, depending on biome
- (Automatically generating crystals will come later!)

--- a/Language/English.json
+++ b/Language/English.json
@@ -1,3 +1,4 @@
 {
-  "ConfigureFilter": "Configure filter"
+  "ConfigureFilter": "Configure filter",
+  "CannotDeconstructHasRock": "Cannot deconstruct. Extruder contains an uncollected extruded rock"
 }
