Add blueprint support for the autocrafter

--- a/Language/English.json
+++ b/Language/English.json
@@ -2,5 +2,7 @@
   "ConfigureFilter": "Configure filter",
   "CannotDeconstructHasRock": "Cannot deconstruct. Extruder contains an uncollected extruded rock",
   "UseBlueprintEncoder": "Use blueprint encoder",
-  "Tooltip_UseBlueprintEncoder": "Open GUI"
+  "Tooltip_UseBlueprintEncoder": "Open GUI",
+  "UseAutoCrafterBlueprint": "Set recipe",
+  "Tooltip_UseAutoCrafterBlueprint": "Access blueprint slot"
 }
